# varnish-vmod-lang

./: .gitignore  Makefile.am  README.md  README.rst  autogen.sh  configure.ac  vmod-lang.spec  vmod-lang.spec.in
.github/workflows/: codeql-analysis.yml
src/: Makefile.am  vmod_lang.c  vmod_lang.vcc  vmod_lang3.vcc
src/tests/: test01.vtc  test02.vtc  test03.vtc  test04.vtc  test05.vtc  test06.vtc
